fix whitespace for real

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,6 +251,10 @@ textarea {
   left: 0;
 }
 
+pre {
+  font-family:  'Inter Tight', sans-serif; white-space: pre; margin: 0;
+}
+
 .pfplink {
   text-decoration: underline;
   transition: color 1.5s;
